# rock-kingdom-ai-battle-assistant-system

./: .gitattributes  .gitignore  .gitmessage-zh-CN.txt  CHANGELOG.md  CONTRIBUTING.md  README.md  config.example.toml  config.toml  pyproject.toml
.githooks/: commit-msg
.github/: pull_request_template.md
.github/workflows/: release.yml
data/: knowledge.db  pets_page_sample.html  skills_page_sample.html
data/debug_pages/: pet_dimo.html  skill_menglie.html
data/logs/: analysis-20260428-155357-f6b4b6ad.jsonl  analysis-20260429-205737-413d94a6.jsonl  analysis-20260429-211223-49295d97.jsonl  analysis-20260429-211229-332f6538.jsonl  analysis-20260429-211253-9d3d8aa5.jsonl
data/rocom_wiki/: manifest.json  skills.csv  skills.json
data/rocom_wiki_smoke/: manifest.json  pets.csv  pets.json  skills.csv  skills.json
data/rocom_wiki_smoke_db/: knowledge.db  manifest.json  pets.csv  pets.json  skills.csv  skills.json
scripts/: ailock_entry.py  build_release.ps1  download_rocom_artworks.py  download_rocom_wiki_artworks.py  fetch_rocom_wiki.py  setup_git_conventions.py  test_image_answer.py  validate_commit_message.py
src/ailock/: advisor.py  app.py  battle_log.py  capture.py  config.py  hotkey.py  knowledge.py  llm_client.py  models.py  skill_vision.py  timing_log.py  ui.py
src/ailock/pet_vision/: index.py  (+8 more)
tests/: test_advisor_timing.py  test_battle_log.py  test_capture.py  test_config.py  test_download_rocom_wiki_artworks.py  test_fetch_rocom_wiki.py  test_knowledge.py  test_llm_client.py  test_pet_vision.py  test_skill_vision.py  test_validate_commit_message.py
(+2 files in other folders)
