[project]
name = "ailock"
version = "0.1.0"
description = "AI Lock - PVP screenshot strategy assistant"
readme = "README.md"
authors = [
    { name = "shr", email = "872761346@QQ.COM" }
]
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.4.4",
    "onnxruntime>=1.25.1",
    "opencv-python-headless>=4.13.0.92",
    "PySide6-Essentials>=6.10.0",
]

[project.urls]
Homepage = "https://github.com/shr0829/rock-kingdom-ai-battle-assistant-system"
Repository = "https://github.com/shr0829/rock-kingdom-ai-battle-assistant-system"
Issues = "https://github.com/shr0829/rock-kingdom-ai-battle-assistant-system/issues"

[project.scripts]
ailock = "ailock:main"

[build-system]
requires = ["uv_build>=0.8.19,<0.9.0"]
build-backend = "uv_build"
